Cyberduck
https://cyberduck.io/

8.5.3
- [Bugfix] Failure uploading file with diacritic in filename (Windows) (#13723)
- [Bugfix] Folders containing backup file dirid.c9r cannot be deleted (Cryptomator) (#13957)
- [Bugfix] Files not decrypted after unlocking vault (Cryptomator, Box) (#13961)

8.5.2
- [Bugfix] Invalid syntax in Open in Terminal command (SFTP, macOS)
- [Bugfix] Passwords for ProxyJump hosts in .ssh/config are not saved (SFTP) (#13936)
- [Bugfix] Files in vault not decrypted (Cryptomator, Google Storage) (#13949)

8.5.1
- [Feature] Skip button to allow creating share with no passphrase (Dropbox, Box, ownCloud, Nextcloud) (#13846)
- [Feature] Redirect to application without requiring to copy authentication code when opening new connection (Dropbox)
- [Feature] Allow configuration of client certificate (ownCloud, Nextcloud)
- [Feature] Use Authorization Code Flow with Proof Key for Code Exchange (PKCE) (Google Storage, Google Drive, Dropbox)
- [Bugfix] Mutual authentication does not work with client certificates with a friendly name set (Windows)

8.5.0
- [Feature] Allow to view and revert previous versions of files (ownCloud, Nextcloud) (#10560)
- [Feature] Allow to request files with upload share link (Dropbox) (#13832)
- [Bugfix] Try keyboard-interactive authentication always before password for interoperability with 2FA configurations (SFTP)
- [Bugfix] Connect to custom hostname from pairing response (Files.com)
- [Bugfix] Failure creating upload link to request files (Nextcloud) (#13791)

8.4.5
- [Bugfix] Failure enabling connection profile from Preferences (#13739)
- [Bugfix] Only set userProject parameter in requests for buckets with requester pays option enabled (Google Storage) (#13745)
- [Bugfix] Allow glob pattern when searching for files in browser (#13781)

8.4.4
- [Bugfix] Prioritise password authentication if password is available (SFTP) (#13442)