@@ -71,6 +71,11 @@
     <li><span class="label label-warning">Bugfix</span> Files not decrypted after unlocking vault (Cryptomator, Box) (<a
             target="_blank" href="https://trac.cyberduck.io/ticket/13961">#13961</a>)
     </li>
+    <li><span class="label label-warning">Bugfix</span> Only read specific key from SSH agent with IdentitiesOnly and
+        public key in IdentitiyFile directive in OpenSSH configuration to limit number of authentication attempts (SFTP)
+        (<a
+                target="_blank" href="https://trac.cyberduck.io/ticket/13935">#13935</a>)
+    </li>
 </ul>
 
 <p>
